--- a/_layouts/default-backup.html
+++ b/_layouts/default-backup.html
@@ -12,66 +12,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
   
-  <!-- Styling -->
-  <style>
-    /* Modern Navigation Bar Styles */
-    .nav-container {
-      width: 100%;
-      background-color: #ffffff;
-      box-shadow: 0 1px 2px rgba(0,0,0,0.1);
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-
-    .nav-menu {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 0.5rem 0;
-      margin: 0;
-      list-style: none;
-    }
-
-    .nav-item {
-      margin: 0 0.5rem;
-    }
-
-    .nav-link {
-      color: #333;
-      text-decoration: none;
-      font-size: 0.9rem;
-      font-weight: 500;
-      padding: 0.3rem 0.6rem;
-      border-radius: 3px;
-      transition: all 0.2s ease;
-    }
-
-    .nav-link:hover {
-      background-color: #f5f5f5;
-      color: #1a73e8;
-    }
-
-    .nav-link.active {
-      color: #1a73e8;
-      background-color: #e8f0fe;
-    }
-
-    @media (max-width: 768px) {
-      .nav-menu {
-        flex-wrap: wrap;
-        padding: 0.3rem 0;
-      }
-      .nav-item {
-        margin: 0.15rem;
-      }
-      .nav-link {
-        font-size: 0.8rem;
-        padding: 0.2rem 0.4rem;
-      }
-    }
-  </style>
-
+  
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-3NEVL70KSZ"></script>
   <script>
@@ -84,8 +25,6 @@
 </head>
 
 
-
-
 <body>
   <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
     <tr style="padding:px">
@@ -96,7 +35,7 @@
             <ul class="nav-menu">
                 <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="#news" class="nav-link" onclick="Expand('news')">News</a></li>
-                <li class="nav-item"><a href="#education" class="nav-link" onclick="Expand('education')">Education</a></li>
+                <li class="nav-item"><a href="/education.html" class="nav-link">Education</a></li>
                 <li class="nav-item"><a href="#experience" class="nav-link" onclick="Expand('experience')">Experience</a></li>
                 <li class="nav-item"><a href="#publications" class="nav-link" onclick="Expand('publications')">Publications</a></li>
                 <li class="nav-item"><a href="#projects" class="nav-link" onclick="Expand('projects')">Projects</a></li>
@@ -258,7 +197,7 @@
         <br>
         <p align="justify">
           <details>
-          <summary>Conducted R&D in the area of zero shot approches for “Open World 3D Scene Understanding” utilizing foundation and large language models; co-supervised by <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei-ICTL</a> and <a href="https://www.cee.ed.tum.de/cms/home/">TUM-CMS</a>.</summary>            
+          <summary>Conducted R&D in the area of zero shot approches for "Open World 3D Scene Understanding" utilizing foundation and large language models; co-supervised by <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei-ICTL</a> and <a href="https://www.cee.ed.tum.de/cms/home/">TUM-CMS</a>.</summary>            
           <ul>
               <li align="justify">Developed <a href="https://opensu3d.github.io/">OpenSU3D</a> an incremental and scalable approch for zero-shot 3D scene understanding utilizing foundation and large language models. </li>
               <li align="justify">Quantitatively and qualitatively demonstrated effectiveness of open vocabulary segmentation and context-based instance retrieval, exceeding state-of-the-art approaches. </li>
