--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
             <ul class="nav-menu">
                 <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="#news" class="nav-link" onclick="Expand('news')">News</a></li>
-                <li class="nav-item"><a href="/education/" class="nav-link">Education</a></li>
+                <li class="nav-item"><a href="{{ site.baseurl }}/education/" class="nav-link">Education</a></li>
                 <li class="nav-item"><a href="#experience" class="nav-link" onclick="Expand('experience')">Experience</a></li>
                 <li class="nav-item"><a href="#publications" class="nav-link" onclick="Expand('publications')">Publications</a></li>
                 <li class="nav-item"><a href="#projects" class="nav-link" onclick="Expand('projects')">Projects</a></li>
