--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -223,65 +223,75 @@
 <hr class="soft">
 
 
- <!-- Include Bootstrap CSS and JS (only if not already included) -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Projects Section -->
+        <button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-projects" id="projects">
+          <h2>Projects</h2>
+        </button>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+          <tr>
+            <td style="padding:2.5%;width:100%;vertical-align:middle">
+              <p> These include coursework, assignments, side projects ... <a href="https://github.com/rafaymhddn">(GitHub)</a> 
+              </p>
+            </td>
+          </tr>
+        </table>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
 
-<!-- Projects Section -->
-<button type="button" class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#content-projects" style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;">
-  <h2>Projects</h2>
-</button>
+          {% for post in site.posts %}
+          {% for cat in post.categories %}
+          {% if cat != 'research' and cat != 'Intel' %}
+          <tr>
+            <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
+              <a href="{{post.image}}"><img src="{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%; border-radius: 5%; border: 2px solid #555" /></a>
+            </td>
+            <td style="padding:2.5%;width:75%;vertical-align:middle">
+              <h3>{{post.title}}</h3>
+              <br>
+              <em>{{post.categories}} {{post.course}}</em>
+              <br>
+              {{ post.date | date: "%Y-%m-%d" }}
 
-<div id="content-projects" class="collapse">
-  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-    <tr>
-      <td style="padding:2.5%;width:100%;vertical-align:middle">
-        <p> These include coursework, assignments, side projects ... <a href="https://github.com/rafaymhddn">(GitHub)</a></p>
-      </td>
-    </tr>
-  </table>
+              <br>
+              {% if post.website %}
+              <a href="{{post.website}}">website</a> /
+              {% endif %}
+              {% if post.paper %}
+              <a href="{{post.paper}}">paper</a> /
+              {% endif %}
+              {% if post.patent %}
+              <a href="{{post.patent}}">patent</a> /
+              {% endif %}
+              {% if post.patent2 %}
+              <a href="{{post.patent2}}">patent #2</a> /
+              {% endif %}
+              {% if post.patent3 %}
+              <a href="{{post.patent3}}">patent #3</a> /
+              {% endif %}
+              {% if post.video %}
+              <a href="{{post.video}}">video</a> /
+              {% endif %}
+              {% if post.video2 %}
+              <a href="{{post.video2}}">video #2</a> /
+              {% endif %}
+              {% if post.code %}
+              <a href="{{post.code}}">code</a> /
+              {% endif %}
+              {% if post.poster %}
+              <a href="{{post.poster}}">poster</a> /
+              {% endif %}
+              {% if post.slides %}
+              <a href="{{post.slides}}">slides</a> /
+              {% endif %}
+              <p></p>
+              {{ post.excerpt }}
+            </td>
+          </tr>
+          {% endif %}
+          {% endfor %}
+          {% endfor %}
+        </table>
 
-  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-    {% for post in site.posts %}
-    {% for cat in post.categories %}
-    {% if cat != 'research' and cat != 'Intel' %}
-    <tr>
-      <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
-        <a href="{{post.image}}">
-          <img src="{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%; border-radius: 5%; border: 2px solid #555" />
-        </a>
-      </td>
-      <td style="padding:2.5%;width:75%;vertical-align:middle">
-        <h3>{{post.title}}</h3>
-        <br>
-        <em>{{post.categories}} {{post.course}}</em>
-        <br>
-        {{ post.date | date: "%Y-%m-%d" }}
-        <br>
-
-        {% if post.website %}<a href="{{post.website}}">website</a> / {% endif %}
-        {% if post.paper %}<a href="{{post.paper}}">paper</a> / {% endif %}
-        {% if post.patent %}<a href="{{post.patent}}">patent</a> / {% endif %}
-        {% if post.patent2 %}<a href="{{post.patent2}}">patent #2</a> / {% endif %}
-        {% if post.patent3 %}<a href="{{post.patent3}}">patent #3</a> / {% endif %}
-        {% if post.video %}<a href="{{post.video}}">video</a> / {% endif %}
-        {% if post.video2 %}<a href="{{post.video2}}">video #2</a> / {% endif %}
-        {% if post.code %}<a href="{{post.code}}">code</a> / {% endif %}
-        {% if post.poster %}<a href="{{post.poster}}">poster</a> / {% endif %}
-        {% if post.slides %}<a href="{{post.slides}}">slides</a> / {% endif %}
-
-        <p></p>
-        {{ post.excerpt }}
-      </td>
-    </tr>
-    {% endif %}
-    {% endfor %}
-    {% endfor %}
-  </table>
-</div>
-
-<hr class="soft">
-
+        <hr class="soft">
 
         <!-- Contact Section -->
         <button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;" type="button" class="collapsible" data-toggle="collapse" data-target="#content-contact" id="contact">
