--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,17 +32,17 @@
       <td style="padding:0px">
 
 <!-- Section Tab -->
-        <div class="nav-container">
-            <ul class="nav-menu">
-                <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="#news" class="nav-link" onclick="Expand('news')">News</a></li>
-                <li class="nav-item"><a href="{{ site.baseurl }}/education/" class="nav-link">Education</a></li>
-                <li class="nav-item"><a href="#experience" class="nav-link" onclick="Expand('experience')">Experience</a></li>
-                <li class="nav-item"><a href="#publications" class="nav-link" onclick="Expand('publications')">Publications</a></li>
-                <li class="nav-item"><a href="#projects" class="nav-link" onclick="Expand('projects')">Projects</a></li>
-                <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
-            </ul>
-        </div>
+<div class="nav-container">
+  <ul class="nav-menu">
+      <li class="nav-item"><a href="{{ site.baseurl }}/" class="nav-link">Home</a></li>
+      <li class="nav-item"><a href="{{ site.baseurl }}/#news" class="nav-link" onclick="Expand('news')">News</a></li>
+      <li class="nav-item"><a href="{{ site.baseurl }}/education/" class="nav-link">Education</a></li>
+      <li class="nav-item"><a href="{{ site.baseurl }}/experience/" class="nav-link">Experience</a></li>
+      <li class="nav-item"><a href="{{ site.baseurl }}/#publications" class="nav-link" onclick="Expand('publications')">Publications</a></li>
+      <li class="nav-item"><a href="{{ site.baseurl }}/projects/" class="nav-link">Projects</a></li>
+      <li class="nav-item"><a href="{{ site.baseurl }}/#contact" class="nav-link">Contact</a></li>
+  </ul>
+</div>
 
 <!-- Name -->
         <table id="name" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-top:40px;"><tbody>
