--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -60,7 +60,7 @@
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
           <div class="one">
-              <img src='images/antler_logo.png' style="width:70%;" alt="project image">
+              <img src='{{ site.baseurl }}/images/antler_logo.png' style="width:70%;" alt="project image">
           </div>
       </td>
       <td style="padding:2.5%;width:75%;vertical-align:top">
@@ -77,7 +77,7 @@
     <tr style="padding-top: 0; padding-bottom: 0;">
       <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
           <div class="one">
-              <img src='images/huawei-logo.jpeg' style="width:70%; height:auto;" alt="project image">
+              <img src='{{ site.baseurl }}/images/huawei-logo.jpeg' style="width:70%; height:auto;" alt="project image">
           </div>
       </td>
       <td style="padding:2.5%;width:75%;vertical-align:top">
@@ -126,7 +126,7 @@
       <tr >
         <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
               <div class="one">
-                  <img src='images/tum-logo.png' style="width:70%; height:auto;" alt="project image">
+                  <img src='{{ site.baseurl }}/images/tum-logo.png' style="width:70%; height:auto;" alt="project image">
               </div>
           </td>
           <td style="padding:2.5%;width:75%;vertical-align:top">
@@ -165,7 +165,7 @@
       <tr>
         <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
             <div class="one">
-                <img src='images/nust-logo.png' style="width:70%; height:auto;" alt="project image">
+                <img src='{{ site.baseurl }}/images/nust-logo.png' style="width:70%; height:auto;" alt="project image">
             </div>
         </td>
         <td style="padding:2.5%;width:75%;vertical-align:top">
