--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -195,7 +195,7 @@
       <tr>
         <td style="padding:2.5%;width:25%;vertical-align:top;text-align:center;min-width:120px">
             <div class="one">
-                <img src='images/ned-logo.png' style="width:70%; height:auto;" alt="project image">
+                <img src='{{ site.baseurl }}/images/ned-logo.png' style="width:70%; height:auto;" alt="project image">
             </div>
         </td>
         <td style="padding:2.5%;width:75%;vertical-align:top">
