--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,7 +77,7 @@
               </p>
 
               <p align="justify">
-                I'm currently working on a <a href="https://remesh.space/">3D generation</a> related startup, and also consult and collobrate with AI-focused startups.
+                I'm currently working on a <a href="https://remesh.space/">3D Gen AI</a> startup, and also consult and collobrate with AI-focused startups.
                 <u class="dotted"><b><i><a href="https://cal.com/rafaymhddn/quickchat" target="_blank" rel="noopener noreferrer" style="color: purple">Feel free to set up a call</a></i></b></u> — I'm happy to discuss research, startups, robotics, 3D vision, LLMs, or potential collaborations.
               </p>
               
@@ -131,21 +131,21 @@
         <!-- Limit to 5 visible items, scroll rest -->
         <div style="max-height: 8.4em; overflow-y: auto;">
           <ul style="margin-top: 0; padding-left: 60px;">
-            <li align="justify"><span style="color:red">[05/2025]</span> <a href="https://opensu3d.github.io/">OpenSU3D</a> was presented at ICRA'25 on 22 May 2025 🎉🚀</li>
+            <li align="justify"><span style="color:red">[05/2025]</span> <a href="https://opensu3d.github.io/">OpenSU3D</a> was presented at ICRA'25 on 22 May 2025 📄</li>
             <li align="justify"><span style="color:blue">[03/2025]</span> Accepted into the ATLER Entrepreneurship in Residence program 🚀</li>
-            <li align="justify"><span style="color:red">[01/2025]</span> <b>OpenSU3D</b> paper accepted at ICRA'25 — check out the <a href="https://opensu3d.github.io/">Project Page</a> 🎓📢</li>
-            <li align="justify"><span style="color:purple">[01/2025]</span> Started building a startup idea around 3D generation 💡🔥</li>
-            <li align="justify"><span style="color:red">[09/2024]</span> Completed, M.Sc., graduated from TUM 🧑‍🎓🎓</li>
-            <li align="justify"><span style="color:blue">[04/2024]</span> Defended Master's thesis on "Open World 3D Scene Understanding" at TUM 🛡️👏</li>
-            <li align="justify"><span style="color:blue">[10/2023]</span> Started thesis research in 3D scene understanding 🔍📊</li>
-            <li align="justify"><span style="color:blue">[04/2023]</span> Joined Huawei Munich Research Center as a Research Intern working on Life-Long SLAM 🤖🏢</li>
-            <li align="justify"><span style="color:blue">[10/2021]</span> Started M.Sc. at TUM 🎓📘</li>
-            <li align="justify"><span style="color:red">[03/2023]</span> Paper on Additive Manufacturing accepted at ISARC'23 📄🎉</li>
-            <li align="justify"><span style="color:purple">[04/2022]</span> Started working as a HiWi at the Chair of Computational Modeling and Simulation 🛠️🧠</li>
-            <li align="justify"><span style="color:blue">[10/2021]</span> Started M.Sc. at TUM, moved to Munich, Germany 🎓🇩🇪</li>
-            <li align="justify"><span style="color:red">[10/2020]</span> Published BE research paper on Nanofluids in Wiley Journal of Heat Transfer 📢📄</li>
-            <li align="justify"><span style="color:purple">[07/2020]</span> Joined PNEC NUST to work on Aerial Robots 🤖✈️</li>
-            <li align="justify"><span style="color:red">[12/2019]</span> Completed B.E. from NEDUET, Pakistan 🎓🎉</li>
+            <li align="justify"><span style="color:red">[01/2025]</span> <b>OpenSU3D</b> paper accepted at ICRA'25 — check out the <a href="https://opensu3d.github.io/">Project Page</a> 📄 </li>
+            <li align="justify"><span style="color:purple">[01/2025]</span> Started building a startup idea around 3D generation 💡</li>
+            <li align="justify"><span style="color:red">[09/2024]</span> Completed, M.Sc., graduated from TUM 🎓</li>
+            <li align="justify"><span style="color:blue">[04/2024]</span> Defended Master's thesis on "Open World 3D Scene Understanding" at TUM 🛡️</li>
+            <li align="justify"><span style="color:blue">[10/2023]</span> Started thesis research in 3D scene understanding 🔍</li>
+            <li align="justify"><span style="color:blue">[04/2023]</span> Joined Huawei Munich Research Center as a Research Intern working on Life-Long SLAM 🏢</li>
+            <li align="justify"><span style="color:red">[03/2023]</span> Paper on Additive Manufacturing accepted at ISARC'23 📄</li>
+            <li align="justify"><span style="color:purple">[04/2022]</span> Started working as a HiWi at the Chair of Computational Modeling and Simulation 🛠️</li>
+            <li align="justify"><span style="color:blue">[10/2021]</span> Started M.Sc. at TUM 🎓</li>
+            <li align="justify"><span style="color:blue">[10/2021]</span> Started M.Sc. at TUM, moved to Munich, Germany 🇩🇪</li>
+            <li align="justify"><span style="color:red">[10/2020]</span> Published BE research paper on Nanofluids in Wiley Journal of Heat Transfer 📄</li>
+            <li align="justify"><span style="color:purple">[07/2020]</span> Joined PNEC NUST to work on Aerial Robots 🤖</li>
+            <li align="justify"><span style="color:red">[12/2019]</span> Completed B.E. from NEDUET, Pakistan 🎓</li>
           </ul>
         </div>
       </td>
