--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -183,7 +183,7 @@
               {{post.authors}}
 
               <br>
-              <em>{{post.subtitle}} - {{post.venue}}</em>, {{ post.date | date: "%Y" }}
+              <em>{{post.subtitle}} - {{post.venue}}</em> 
               <br>
               {% if post.paper %}
               <a href="{{post.paper}}">paper</a> /
@@ -199,6 +199,9 @@
               {% endif %}
               {% if post.poster %}
               <a href="{{post.poster}}">poster</a> /
+              {% endif %}
+              {% if <post class="video"></post> %}
+              <a href="{{post.video}}">video</a> /
               {% endif %}
               {% if post.slides %}
               <a href="{{post.slides}}">slides</a> /
