--- a/_layouts/education.html
+++ b/_layouts/education.html
@@ -56,7 +56,9 @@
             <table style="width: 100%; border: 0px; border-spacing: 0px; border-collapse: separate; margin-right: auto; margin-left: auto;">
               <tr>
                 <td style="padding: 2.5%; width: 15%; vertical-align: top; text-align: center; min-width: 120px;">
-                  <img src='{{ site.baseurl }}/images/tum-logo.png' style="width: 40%; height: auto;" alt="Technical University of Munich logo">
+                  <div class="one">
+                    <img src='{{ site.baseurl }}/images/tum-logo.png' style="width: 40%; height: auto;" alt="Technical University of Munich logo">
+                  </div>
                 </td>
                 <td style="padding: 2.5%; width: 85%; vertical-align: top;">
                   <papertitle><big><b>M.Sc - Technical University of Munich</b></big></papertitle>
@@ -64,7 +66,7 @@
                   Oct 2021 - Aug 2024
                   <br>
                   <p align="justify">
-                    Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/"> (IEEE ICRA'25)</a>
+                    Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/"> (IEEE, ICRA 2025)</a>
                   </p>
                 </td>
               </tr>
@@ -91,16 +93,6 @@
     
 
 
-          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-            <tr>
-              <td style="padding:0px">
-                <br>
-                <p style="text-align:center;font-size:small;">
-                  Design and source code from <a style="font-size:small;" href="https://jonbarron.info">Jon Barron's website</a>
-                </p>
-              </td>
-            </tr>
-          </table>
           
         </td>
       </tr>
