--- a/_layouts/education.html
+++ b/_layouts/education.html
@@ -42,48 +42,51 @@
         <li class="nav-item"><a href="{{ site.baseurl }}/projects/" class="nav-link">Projects</a></li>
         <li class="nav-item"><a href="{{ site.baseurl }}/#contact" class="nav-link">Contact</a></li>
     </ul>
-  </div>
+</div>
 
-  <button style="padding: 2.5%; border: 0px transparent; background-color: transparent; outline: none;" type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education">
-    <h2>Education</h2>
-  </button>
+<button style="padding: 2.5%; border: 0px transparent; background-color: transparent; outline: none;" type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education">
+  <h2>Education</h2>
+</button>
+
+<div id="content-education" class="collapse in">
+  <table style="width: 100%; border: 0px; border-spacing: 0px; border-collapse: separate; margin-right: auto; margin-left: auto;">
+    <tbody><tr>
+      <td style="padding: 2.5% 2.5% 0.5% 2.5%; width: 15%; vertical-align: top; text-align: center; min-width: 120px;">
+        <div class="one">
+          <img src="{{ site.baseurl }}/images/tum-logo.png" style="width: 40%; height: auto;" alt="Technical University of Munich logo">
+        </div>
+      </td>
+      <td style="padding: 2.5% 2.5% 0.5% 2.5%; width: 85%; vertical-align: top;">
+        <papertitle><big><b>M.Sc - Technical University of Munich</b></big></papertitle>
+        <br>
+        <span style="color: grey; font-size: 0.9em;">Munich, Germany - Oct 2021 - Aug 2024</span>
+        <br>
+        <p align="justify">
+          Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/"> (IEEE, ICRA 2025)</a>
+        </p>
+      </td>
+    </tr>
+    <tr>
+      <td style="padding: 0.5% 2.5% 2.5% 2.5%; width: 15%; vertical-align: top; text-align: center; min-width: 120px;">
+        <div class="one">
+          <img src="{{ site.baseurl }}/images/ned-logo.png" style="width: 40%; height: auto;" alt="NED University of Engineering and Technology logo">
+        </div>
+      </td>
+      <td style="padding: 0.5% 2.5% 2.5% 2.5%; width: 85%; vertical-align: top;">
+        <papertitle><big><b>B.Eng - NED University of Engineering and Technology</b></big></papertitle>
+        <br>
+        <span style="color: grey; font-size: 0.9em;">Karachi, Pakistan - Dec 2015 - Aug 2019</span>
+        <br>
+        <p align="justify">
+          Numerical Investigation of Heat Transfer Enhancement in Impinging Jets. <a href="https://doi.org/10.1002/htj.21986">(Wiley,Heat Transfer)</a>
+        </p>
+      </td>
+    </tr>
+  </tbody></table>
+</div>
+
+
   
-  <div id="content-education" class="collapse in">
-    <table style="width: 100%; border: 0px; border-spacing: 0px; border-collapse: separate; margin-right: auto; margin-left: auto;">
-      <tr>
-        <td style="padding: 0.5% 2.5% 0.5% 2.5%; width: 15%; vertical-align: top; text-align: center; min-width: 120px;">
-          <div class="one">
-            <img src='{{ site.baseurl }}/images/tum-logo.png' style="width: 40%; height: auto;" alt="Technical University of Munich logo">
-          </div>
-        </td>
-        <td style="padding: 0.5% 2.5% 0.5% 2.5%; width: 85%; vertical-align: top;">
-          <papertitle><big><b>M.Sc - Technical University of Munich</b></big></papertitle>
-          <br>
-          <span style="color: grey; font-size: 0.9em;">Munich, Germany - Oct 2021 - Aug 2024</span>
-          <br>
-          <p align="justify">
-            Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/"> (IEEE, ICRA 2025)</a>
-          </p>
-        </td>
-      </tr>
-      <tr>
-        <td style="padding: 0.5% 2.5% 0.5% 2.5%; width: 15%; vertical-align: top; text-align: center; min-width: 120px;">
-          <div class="one">
-            <img src='{{ site.baseurl }}/images/ned-logo.png' style="width: 40%; height: auto;" alt="NED University of Engineering and Technology logo">
-          </div>
-        </td>
-        <td style="padding: 0.5% 2.5% 0.5% 2.5%; width: 85%; vertical-align: top;">
-          <papertitle><big><b>B.Eng - NED University of Engineering and Technology</b></big></papertitle>
-          <br>
-          <span style="color: grey; font-size: 0.9em;">Karachi, Pakistan - Dec 2015 - Aug 2019</span>
-          <br>
-          <p align="justify">
-            Numerical Investigation of Heat Transfer Enhancement in Impinging Jets. <a href="https://doi.org/10.1002/htj.21986">(Wiley,Heat Transfer)</a>
-          </p>
-        </td>
-      </tr>
-    </table>
-  </div>
   <hr class="soft">
 
 
